@@ -9,7 +9,6 @@ Build-Depends: cdbs (>= 0.4.90~),
                gnome-pkg-tools (>= 0.6),
                gobject-introspection (>= 0.10.0),
                intltool (>= 0.35.0),
-               python-gi-dev (>= 3.0),
                gir1.2-rb-3.0,
                gir1.2-glib-2.0,
                gir1.2-gtk-3.0,
